tests/invalid_make_int/missing_initial_section.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module missing_initial_section.

:- pred p.
:- mode p is det.
p.
